# LDPC-star

./: .gitignore  README.md  readme.md  requirements.txt
Chain/: channel.py  modem.py
Hamming/: hamming.py
LDPC/: BiArray.py  __init__.py  test_biarray.py
LDPC/decode/: LDPC_decode.py
LDPC/encode/: LDPC_encode.py
MatrixConstructor/: HMatrixConstructor.py  __init__.py
csource/: CMakeLists.txt  LLR_BP_CUDA.cu
example/: example-link.py  lenLDPC.py  plot_len.py  rate_LDPC.ipynb  rateldpc.py
test/: test_BF_decode.py  test_HMatrix.py  test_SPA_decode.py
turbo/: turbo.m
utils/: __init__.py  tool.py
